# RetailOPS-MCP

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CLIENT_COMPLETE.md  CLIENT_FINAL_SUMMARY.md  DATA_SPECIFICATION.md  PROJECT_ANALYSIS.md  README.md  USAGE.md  client exmple output.txt  install_client.bat  stapp.py  stapp_hardcoded1.py  test_connection.py  test_connection_fixed.py  test_integration.py
GITHUB_READY/: README_INSTRUCTIONS.txt  UPLOAD_INSTRUCTIONS.md  copy_files.py  setup_github.py
GITHUB_READY/client/: cli.py  nlp_interface.py  orchestrator.py
client/: QUICKSTART.md  README.md  __init__.py  chatbot_example.py  cli.py  example_usage.py  examples.py  nlp_interface.py  orchestrator.py  pyproject.toml  requirements.txt  run_log.txt  test_client.py
logs/: test_integration_6_1_26_0001
servers/: run_servers.py
servers/catalog-enricher/: README.md  mock_catalog_inputs.json  pyproject.toml  run_server.bat  server.py  test_catalog.py
servers/catalog-enricher/data/: category_mappings.json  product_catalog.json
servers/forecasting/: pyproject.toml  run_server.bat  schema.json  server.py  test_client.py  test_comprehensive.py
servers/forecasting/data/: events.json  generate_sales.py  sales_history.csv  surge_profile.json
servers/pricing-strategy/: README.md  mock_pricing_inputs.json  pyproject.toml  run_server.bat  server.py  test_pricing.py
servers/pricing-strategy/data/: competitor_prices.json  price_elasticity.json
servers/replenishment/: main.py  mock_replenishment_inputs.json  pyproject.toml  server.py  test_replenishment_graph.py
