[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.1.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.8.0",
]
